<resources>
    <string name="app_name">Movie Catalouge</string>
    <string name="title_movie">Movies</string>
    <string name="title_tv_show">TV Shows</string>
    <string name="favorite">Favorites</string>
    <string name="setting">Setting</string>
    <string name="change_language">Change Language</string>
    <string name="photo">Photo</string>
    <string name="empty_string">-</string>
    <string name="image_description">Images</string>
    <string name="format_url">%1$s%2$s</string>
    <string name="format_content_description">%1$s %2$s</string>
    <string name="error">Error</string>
    <string name="try_again">Try Again</string>
    <string name="favorite_deleted">Favorite Deleted</string>
    <string name="favorite_added">Favorite Added</string>
    <string name="button_image_favorite">image button favorite</string>
    <string name="search_movies">Search Movies</string>
    <string name="search_tv_shows">Search TV Shows</string>
    <string name="search_movies_favorite">Search Movie Favorites</string>
    <string name="search_tv_shows_favorite">Search TV Show Favorites</string>
    <string name="data_null">Data Not Found</string>
    <string name="search">Search here</string>

    <string name="poster">photo film</string>
    <string name="title">A Star Is Born</string>
    <string name="release_date">October 5, 2018</string>
    <string name="vote_average">7.0</string>
    <string name="vote_count">1000</string>
    <string name="story_line">Story Line</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Urna condimentum mattis pellentesque id nibh tortor id
        aliquet. In nisl nisi scelerisque eu ultrices vitae auctor eu augue. Dictum at tempor commodo ullamcorper a lacus vestibulum sed arcu. Tincidunt vitae semper quis lectus nulla at volutpat diam.
        Odio tempor orci dapibus ultrices in iaculis nunc sed. Ultrices vitae auctor eu augue ut lectus. Orci sagittis eu volutpat odio facilisis mauris. Vitae congue mauris rhoncus aenean vel elit scelerisque
        mauris pellentesque. Enim ut sem viverra aliquet eget sit amet. Vel quam elementum pulvinar etiam non quam lacus suspendisse faucibus. Ultrices tincidunt arcu non sodales neque sodales ut etiam.
        Curabitur vitae nunc sed velit dignissim sodales ut. Magna sit amet purus gravida quis. Vitae justo eget magna fermentum iaculis eu non diam. Netus et malesuada fames ac turpis egestas sed tempus urna.
        Sagittis orci a scelerisque purus semper eget duis at tellus. Tellus id interdum velit laoreet id donec. In eu mi bibendum neque egestas congue quisque. Vitae sapien pellentesque habitant morbitristique.
        Erat nam at lectus urna duis convallis tellus id. Cursus vitae congue mauris rhoncus aenean vel elit scelerisque. Bibendum ut tristique et egestas quis ipsum suspendisse ultrices. Sem viverra
        aliquet eget sit amet. Nisl nunc mi ipsum faucibus. Dignissim suspendisse in est ante in nibh mauris cursus. Maecenas accumsan lacus vel facilisis volutpat est velit egestas dui. Integer feugiat
        scelerisque varius morbi enim nunc faucibus. Leo a diam sollicitudin tempor id eu nisl nunc mi. Eu consequat ac felis donec et odio pellentesque diam volutpat. Scelerisque mauris pellentesque pulvinar
        pellentesque habitant morbi. Et ligula ullamcorper malesuada proin libero nunc. Adipiscing enim eu turpis egestas pretium aenean pharetra magna ac. Netus et malesuada fames ac turpis. Nunc sed id semper
        risus in hendrerit gravida rutrum. Mattis molestie a iaculis at. Nec nam aliquam sem et. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Ut faucibus pulvinar elementum integer enim neque
        volutpat ac. Turpis tincidunt id aliquet risus feugiat in ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Urna condimentum mattis pellentesque id nibh tortor id
        aliquet. In nisl nisi scelerisque eu ultrices vitae auctor eu augue. Dictum at tempor commodo ullamcorper a lacus vestibulum sed arcu. Tincidunt vitae semper quis lectus nulla at volutpat diam.
        Odio tempor orci dapibus ultrices in iaculis nunc sed. Ultrices vitae auctor eu augue ut lectus. Orci sagittis eu volutpat odio facilisis mauris. Vitae congue mauris rhoncus aenean vel elit scelerisque
        mauris pellentesque. Enim ut sem viverra aliquet eget sit amet. Vel quam elementum pulvinar etiam non quam lacus suspendisse faucibus. Ultrices tincidunt arcu non sodales neque sodales ut etiam.
        Curabitur vitae nunc sed velit dignissim sodales ut. Magna sit amet purus gravida quis. Vitae justo eget magna fermentum iaculis eu non diam. Netus et malesuada fames ac turpis egestas sed tempus urna.
        Sagittis orci a scelerisque purus semper eget duis at tellus. Tellus id interdum velit laoreet id donec. In eu mi bibendum neque egestas congue quisque. Vitae sapien pellentesque habitant morbitristique.
        Erat nam at lectus urna duis convallis tellus id. Cursus vitae congue mauris rhoncus aenean vel elit scelerisque. Bibendum ut tristique et egestas quis ipsum suspendisse ultrices. Sem viverra
        aliquet eget sit amet. Nisl nunc mi ipsum faucibus. Dignissim suspendisse in est ante in nibh mauris cursus. Maecenas accumsan lacus vel facilisis volutpat est velit egestas dui. Integer feugiat
        scelerisque varius morbi enim nunc faucibus. Leo a diam sollicitudin tempor id eu nisl nunc mi. Eu consequat ac felis donec et odio pellentesque diam volutpat. Scelerisque mauris pellentesque pulvinar
        pellentesque habitant morbi. Et ligula ullamcorper malesuada proin libero nunc. Adipiscing enim eu turpis egestas pretium aenean pharetra magna ac. Netus et malesuada fames ac turpis. Nunc sed id semper
        risus in hendrerit gravida rutrum. Mattis molestie a iaculis at. Nec nam aliquam sem et. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Ut faucibus pulvinar elementum integer enim neque
        volutpat ac. Turpis tincidunt id aliquet risus feugiat in ante.</string>

    <string name="appwidget_text">Favorite Banner</string>
    <string name="empty_text">NO DATA</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="release">Release Notification</string>
    <string name="reminder">Reminder</string>
    <string name="release_summary">Notification for movie and tv show release today</string>
    <string name="reminder_summary">Remain you to open this application again</string>

    <string name="key_language">language</string>
    <string name="key_release">release</string>
    <string name="key_reminder">remainder</string>

    <string name="notification_setup">Notification Set Up</string>
    <string name="notification_off">Notification Off</string>
    <string name="reminder_message">Check Movie and Tv Show Today</string>
    <string name="voice_input">voice input</string>
    <string name="widget_image">widget image</string>
</resources>
