<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        android:title="@string/language"
        app:iconSpaceReserved="false">

        <Preference
            android:key="@string/key_language"
            android:title="@string/change_language"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notification"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_release"
            android:summary="@string/release_summary"
            android:title="@string/release"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_reminder"
            android:summary="@string/reminder_summary"
            android:title="@string/reminder"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>